--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>germany-iconfont glyphs preview</title>
-
+    <link rel="stylesheet" href="css/germany-iconfont.css">
     <style>
       /* Page Styles */
 
@@ -136,76 +136,6 @@
         font-size: 12px;
         padding: 20px 0;
       }
-
-      /* Icon Font: germany-iconfont */
-
-      @font-face {
-  font-family: "germany-iconfont";
-  src: url("./germany-iconfont_cb7c3552c93602b7ec0af0563651c85c.eot");
-  src: url("./germany-iconfont_cb7c3552c93602b7ec0af0563651c85c.eot?#iefix") format("embedded-opentype"),
-       url("./germany-iconfont_cb7c3552c93602b7ec0af0563651c85c.woff") format("woff"),
-       url("./germany-iconfont_cb7c3552c93602b7ec0af0563651c85c.ttf") format("truetype"),
-       url("./germany-iconfont_cb7c3552c93602b7ec0af0563651c85c.svg#germany-iconfont") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-  @font-face {
-    font-family: "germany-iconfont";
-    src: url("./germany-iconfont_cb7c3552c93602b7ec0af0563651c85c.svg#germany-iconfont") format("svg");
-  }
-}
-
-      [data-icon]:before { content: attr(data-icon); }
-
-      [data-icon]:before,
-      .icon-baden-wuerttemberg:before,
-.icon-bayern:before,
-.icon-berlin:before,
-.icon-brandenburg:before,
-.icon-bremen:before,
-.icon-hamburg:before,
-.icon-hessen:before,
-.icon-mecklenburg-vorpommern:before,
-.icon-niedersachsen:before,
-.icon-nordrhein-westfalen:before,
-.icon-rheinland-pfalz:before,
-.icon-saarland:before,
-.icon-sachsen:before,
-.icon-sachsen-anhalt:before,
-.icon-schleswig-holstein:before,
-.icon-thueringen:before {
-        display: inline-block;
-  font-family: "germany-iconfont";
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  line-height: 1;
-  text-decoration: inherit;
-  text-rendering: optimizeLegibility;
-  text-transform: none;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  font-smoothing: antialiased;
-      }
-
-      .icon-baden-wuerttemberg:before { content: "\f137"; }
-.icon-bayern:before { content: "\f138"; }
-.icon-berlin:before { content: "\f139"; }
-.icon-brandenburg:before { content: "\f13a"; }
-.icon-bremen:before { content: "\f13b"; }
-.icon-hamburg:before { content: "\f13c"; }
-.icon-hessen:before { content: "\f13d"; }
-.icon-mecklenburg-vorpommern:before { content: "\f13e"; }
-.icon-niedersachsen:before { content: "\f13f"; }
-.icon-nordrhein-westfalen:before { content: "\f140"; }
-.icon-rheinland-pfalz:before { content: "\f141"; }
-.icon-saarland:before { content: "\f142"; }
-.icon-sachsen:before { content: "\f143"; }
-.icon-sachsen-anhalt:before { content: "\f144"; }
-.icon-schleswig-holstein:before { content: "\f145"; }
-.icon-thueringen:before { content: "\f146"; }
     </style>
 
     <!--[if lte IE 8]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
@@ -219,6 +149,9 @@
   </head>
 
   <body class="characters-off">
+    
+    <a href="https://github.com/wbkd/germany-iconfont"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+
     <div id="page" class="container">
       <header>
         <h1>germany-iconfont contains 16 glyphs:</h1>
