add minified version

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>germany-iconfont glyphs preview</title>
-    <link rel="stylesheet" href="css/germany-iconfont.css">
+    <link rel="stylesheet" href="css/germany-iconfont.min.css">
     <style>
       /* Page Styles */
 
